<?xml version="1.0"?>
<package format="2">
  <name>picar_slam</name>
  <version>0.0.1</version>
  <description>A SLAM navigation package for the PiCar.</description>

  <maintainer email="enivium@gmail.com">Ethan Snow</maintainer>

  <license>See PiCar license info.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>rospy</depend>
  <depend>tf</depend>

  <exec_depend>hector_mapping</exec_depend>
  <exec_depend>hector_geotiff</exec_depend>
</package>
